--- a/site/styles.css
+++ b/site/styles.css
@@ -201,3 +201,17 @@ div[style="width:100%; float:center; height:100%; margin:30px; position: fixed;"
     text-align: center;
   }
   
+
+  ::-webkit-scrollbar {
+    width: 8px;
+  }
+
+
+  ::-webkit-scrollbar-thumb {
+    background-color:  #0077b3;
+    border-radius: 4px;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background-color:  #005580;
+  }
