--- a/site/personal.css
+++ b/site/personal.css
@@ -129,3 +129,30 @@ h3.current {
   background-color: #74B2CC;
   color: white;
 }
+
+
+#instructions {
+  text-align: center;
+  max-width: 400px;
+  align-items: center;
+  justify-content: center;
+}
+
+h2 {
+  margin-top: 10px;
+  margin-bottom: 20px;
+  font-size: 24px;
+}
+
+ol {
+  list-style-type: none;
+  padding-left: 40px;
+  margin-bottom: 30px;
+}
+
+li {
+  font-size: 15px;
+  line-height: 1.5;
+  margin-bottom: 5px;
+}
+
