--- a/site/personal.css
+++ b/site/personal.css
@@ -136,6 +136,8 @@ h3.current {
   max-width: 400px;
   align-items: center;
   justify-content: center;
+  margin: 0 auto; /* Added margin properties */
+}
 }
 
 h2 {
