--- a/site/personal.css
+++ b/site/personal.css
@@ -136,25 +136,22 @@ h3.current {
   max-width: 400px;
   align-items: center;
   justify-content: center;
-  margin: 0 auto; /* Added margin properties */
-}
+  margin: 0 auto;
 }
 
-h2 {
+
+h3 {
   margin-top: 10px;
   margin-bottom: 20px;
   font-size: 24px;
+  color: #005E8A;
 }
 
-ol {
-  list-style-type: none;
-  padding-left: 40px;
+p {
   margin-bottom: 30px;
+  font-size: 15px;
 }
 
-li {
-  font-size: 15px;
-  line-height: 1.5;
-  margin-bottom: 5px;
+
 }
 
