--- a/site/styles.css
+++ b/site/styles.css
@@ -52,7 +52,7 @@ border-radius: 5px;
   text-decoration: none;
   display: inline-block;
   border-radius: 5px;
-  padding: 10px 20px; /* added this line */
+  padding: 10px 20px;
 }
 
 /* Hover and active link style for top bar */
@@ -200,8 +200,10 @@ div[style="width:100%; float:center; height:100%; margin:30px; position: fixed;"
     padding: 30px;
     text-align: center;
   }
-  
 
+
+/* הגדרת עיצוב פס גלילה */
+  
   ::-webkit-scrollbar {
     width: 8px;
   }
@@ -215,3 +217,37 @@ div[style="width:100%; float:center; height:100%; margin:30px; position: fixed;"
   ::-webkit-scrollbar-thumb:hover {
     background-color:  #005580;
   }
+  
+
+
+/* הגדרת הקו המהבהב */
+.search-input {
+  caret-color: #2d4373;
+}
+
+.search-input::-webkit-caret {
+  border-width: 2px;
+}
+
+.search-input::-moz-caret {
+  border-width: 2px;
+}
+
+.search-input::caret {
+  border-width: 2px;
+}
+
+.search-input::-webkit-caret {
+  border-style: solid;
+  border-color: #2d4373;
+}
+
+.search-input::-moz-caret {
+  border-style: solid;
+  border-color: #2d4373;
+}
+
+.search-input::caret {
+  border-style: solid;
+  border-color: #2d4373;
+}
