--- a/site/personal.css
+++ b/site/personal.css
@@ -25,20 +25,24 @@
 .search-input,
 .search-select {
   font-family: Tahoma;
-  font-size: 18px;
   padding-left: 10px;
   padding-right: 10px;
-  width: 150px;
   height: 58px;
   border: 1px solid #005E8A;
-  border-radius: 4px;
   box-shadow: 0 5px 15px rgba(45, 67, 115, 0.5);
   transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+}
+
+.search-select {
+  font-size: 18px;
+  border-radius: 5px 10px 10px 5px;
+  width: 150px;
 }
 
 .search-input {
   font-size: 20px;
   width: 300px;
+  border-radius: 5px;
 }
 
 .search-input:focus,
@@ -56,14 +60,14 @@
   width: 100px;
   height: 60px;
   font-size: 20px;
-  border-radius: 4px;
+  border-radius: 5px;
   cursor: pointer;
   background-color: #2d4373;
   color: #fff;
   border: none;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
   box-shadow: 0 5px 15px rgba(45, 67, 115, 0.5);
-  transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+  transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;  border-radius: 10px 5px 5px 10px;
 }
 
 .search-input:hover,
@@ -106,6 +110,7 @@
   padding-top: 40px;
   width: 100%;
   z-index: 9999;
+  border-radius: 5px;
 }
 
 a {
