הגדרת מצביע כפתור

--- a/site/personal.css
+++ b/site/personal.css
@@ -121,6 +121,7 @@ a {
   display: inline-block;
   border-radius: 5px;
   padding: 10px 20px;
+  cursor: pointer;
 }
 
 a:hover,
@@ -159,4 +160,3 @@ p {
 
 
 }
-
