עדכוני עיצוב חשובים

--- a/site/personal.css
+++ b/site/personal.css
@@ -62,7 +62,7 @@
   font-size: 20px;
   border-radius: 5px;
   cursor: pointer;
-  background-color: #2d4373;
+  background-color: #5D3AB0;
   color: #fff;
   border: none;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
@@ -77,11 +77,11 @@
 }
 
 .search-button:hover {
-  background-color: #1e2d4d;
+  background-color: #362266;
 }
 
 .search-button:active {
-  background-color: #2d4373;
+  background-color: #5D3AB0;
 }
 
 #resultsTable {
@@ -150,7 +150,7 @@ h3 {
   margin-top: 10px;
   margin-bottom: 40px;
   font-size: 24px;
-  color: #005E8A;
+  color: #362266;
 }
 
 p {
