--- a/site/styles.css
+++ b/site/styles.css
@@ -25,25 +25,38 @@ width: 100%;
 z-index: 0;
 top: 0;
 right: 0;
-background-color: #005E8A;
+background-color: #4D3091;
 box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+display: inline-block;
 }
 
 /* Navigation menu links */
 .topnav h3 {
-font-size: 24px;
-font-weight: 600;
-text-transform: uppercase;
-letter-spacing: 2px;
-margin: 0;
-padding: 0 20px;
-line-height: 60px;
-display: inline-block;
-transition: all 0.2s ease-in-out;
-background-color: #fff;
-color: #005E8A;
-border-radius: 5px;
+  font-size: 24px;
+  font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  margin: 0;
+  padding: 0 5px 0px 15px;
+  display: flex;
+  align-items: center;
+  height: 100%;
+  transition: all 0.2s ease-in-out;
+  background-color: #fff;
+  color: #4D3091;
+  border-radius: 5px;
 }
+
+.parent-element {
+  height: 60px;
+  text-align: center;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;  
+}
+
+
 
 /* Default link style for top bar */
 .topnav a {
@@ -158,11 +171,6 @@ img.button-image {
   height: auto;
 }
 
-.topnav h3 {
-font-size: 20px;
-padding: 10px 0;
-display: block;
-}
 
 .topnav a {
 display: block;
