ניקוי וסידור ה-CSS

--- a/site/personal.css
+++ b/site/personal.css
@@ -14,12 +14,16 @@
       border-bottom: 1px solid #ddd;
     }
 
-    .fixed-bottom {
-      height: 2vh;
-	  position: fixed;
-	  z-index: 9999;
-	  bottom: 0px;
-    }
+.fixed-bottom {
+	position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: #FFF5A6;
+    padding: 30px;
+    text-align: center;
+    height: 2vh;
+	z-index: 9999;
+}
 
 
 .search-input,
@@ -40,6 +44,7 @@
 }
 
 .search-input {
+  caret-color: #2d4373;
   font-size: 20px;
   width: 300px;
   border-radius: 5px;
@@ -97,9 +102,16 @@
 }
 
 .topnav {
+  text-align: center;
+  height: 60px;
+  width: 100%;
+  background-color: #4D3091;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+  display: inline-block;
   position: fixed;
   top: 0;
   left: 0;
+  right: 0;
   width: 100%;
   padding: 10px;
   z-index: 9999;
@@ -111,6 +123,16 @@
   width: 100%;
   z-index: 9999;
   border-radius: 5px;
+}
+
+
+.parent-element {
+  height: 60px;
+  text-align: center;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;  
 }
 
 a {
