--- a/site/personal.css
+++ b/site/personal.css
@@ -1,28 +1,28 @@
-    form {
-      margin-bottom: 20px;
-      text-align: center;
-    }
+form {
+  margin-bottom: 20px;
+  text-align: cente
+}
 
-    table {
-	  width: 100%;
-	  overflow-y: scroll;
-    }
+table {
+  width: 100%;
+  overflow-y: scroll;
+}
 
-    th, td {
-      padding: 8px;
-      text-align: right;
-      border-bottom: 1px solid #ddd;
-    }
+th, td {
+  padding: 8px;
+  text-align: right;
+  border-bottom: 1px solid #ddd;
+}
 
 .fixed-bottom {
-	position: fixed;
-    bottom: 0;
-    width: 100%;
-    background-color: #FFF5A6;
-    padding: 30px;
-    text-align: center;
-    height: 2vh;
-	z-index: 9999;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background-color: #FFF5A6;
+  padding: 25px;
+  text-align: center;
+  height: 2vh;
+  z-index: 9999;
 }
 
 
@@ -96,7 +96,7 @@
   margin-top: 180px;
   margin-bottom: 500px;
   width: 92%;
-  height: 55vh;
+  height: 60vh;
   overflow: auto;
   padding: 20px;
 }
@@ -178,7 +178,4 @@ h3 {
 p {
   margin-bottom: 30px;
   font-size: 15px;
-}
-
-
 }
