--- a/site/personal.css
+++ b/site/personal.css
@@ -1,6 +1,6 @@
 form {
   margin-bottom: 20px;
-  text-align: cente
+  text-align: center;
 }
 
 table {
@@ -19,9 +19,8 @@ th, td {
   bottom: 0;
   width: 100%;
   background-color: #FFF5A6;
-  padding: 25px;
+  padding-top: 25px;
   text-align: center;
-  height: 2vh;
   z-index: 9999;
 }
 
@@ -53,7 +52,7 @@ th, td {
 .search-input:focus,
 .search-select:focus {
   outline: none;
-  background: #e6f7ff;
+  background: #E6DCFF;
 }
 
 .search-select option {
@@ -93,10 +92,10 @@ th, td {
   position: fixed;
   margin-left: 3%;
   margin-right: 3%;
-  margin-top: 180px;
-  margin-bottom: 500px;
+  margin-top: 25vh;
+  margin-bottom: 5vh;
   width: 92%;
-  height: 60vh;
+  height: 60%;
   overflow: auto;
   padding: 20px;
 }
@@ -126,13 +125,49 @@ th, td {
 }
 
 
+/* Navigation menu links */
+.topnav h3 {
+  font-size: 24px;
+  font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  margin: 0;
+  padding: 0 5px 0px 15px;
+  display: flex;
+  align-items: center;
+  height: 100%;
+  transition: all 0.2s ease-in-out;
+  background-color: #fff;
+  color: #4D3091;
+  border-radius: 5px;
+}
+
+
+/* Default link style for top bar */
+.topnav a {
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  border-radius: 5px;
+  padding: 10px 20px;
+}
+
+/* Hover and active link style for top bar */
+.topnav a:hover,
+.topnav a:active,
+.topnav h3.current {
+  color: #73FBFD;
+  background-color: #C0C0C0;
+}
+
+
 .parent-element {
   height: 60px;
   text-align: center;
   align-items: center;
   display: flex;
   justify-content: center;
-  align-items: center;  
 }
 
 a {
@@ -164,7 +199,7 @@ h3.current {
   max-width: 400px;
   align-items: center;
   justify-content: center;
-  margin: 0 auto;
+  margin: auto auto;
 }
 
 
@@ -178,4 +213,116 @@ h3 {
 p {
   margin-bottom: 30px;
   font-size: 15px;
+}
+
+
+
+
+@media screen and (max-width: 900px) {
+.topnav {
+  height: auto;
+  padding: 10px 0;
+  position: static;
+  overflow: hidden;
+}
+
+.topnav img {
+position: static;
+margin: 0 auto;
+}
+
+img.button-image {
+  max-width: 100%;
+  height: auto;
+  display: block;
+}
+
+
+.parent-element {
+  max-width: 100%;
+  width: 100%;
+
+}
+
+
+.topnav h3 {
+  left: auto;
+  right: auto;
+  float: center;
+  font-size: 20px;
+}
+
+
+.topnav a {
+  display: block;
+  float: none;
+  text-align: center;
+  padding: 10px;
+}
+
+.topnav a:hover,
+.topnav a:active,
+.topnav h3.current {
+color: #005E8A;
+}
+
+/* Content on the left side */
+.topnav {
+left: auto;
+right: auto;
+float: center;
+position: static;
+}
+
+.left_item {
+  float: left;
+  left: 5px;
+}
+
+.search-input {
+  width: 150px;
+  font-size: 16px;
+}
+
+.search-select {
+  width: 80px;
+  font-size: 14px;
+
+}
+
+.search-button {
+  width: 60px;
+  font-size: 16px;
+}
+
+.search-button,
+.search-select,
+.search-input {
+  height: 50px; 
+}
+
+
+#resultsTable {
+  margin-top: 15vh;
+  margin-bottom: 5vh;
+  width: 80%;
+  center: auto;
+  height: 60%;
+  margin-right: 3vh;
+  margin-left: 3vh;
+  
+}
+
+.fixed-bottom {
+  position: fixed;
+  padding-top: 15px;
+  text-align: center;
+  height: 30px;
+  z-index: 9999;
+}
+
+.fixed-bottom p {
+  font-size: 12px;
+}
+
 }
