עיצוב סרגל תחתון

--- a/site/personal.css
+++ b/site/personal.css
@@ -19,9 +19,13 @@ th, td {
   bottom: 0;
   width: 100%;
   background-color: #FFF5A6;
-  padding-top: 25px;
+  padding-top: 20px;
   text-align: center;
   z-index: 9999;
+}
+
+.fixed-bottom p {
+  margin-bottom: 20px;
 }
 
 
