הגדרת גדלי טבלה

--- a/site/personal.css
+++ b/site/personal.css
@@ -208,6 +208,19 @@ h3.current {
 }
 
 
+#resultsTable table {
+    table-layout: fixed;
+    width: 100%;
+  }
+  
+#resultsTable th,
+#resultsTable td {
+    width: 25%; /* Adjust the width as per your requirements */
+    word-wrap: break-word; /* Wraps long content within the column */
+    max-width: 300px; /* Optional: Specify a maximum width for the columns */
+}
+
+
 h3 {
   margin-top: 10px;
   margin-bottom: 40px;
