--- a/site/personal.css
+++ b/site/personal.css
@@ -252,6 +252,61 @@ p {
 }
 
 
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 10000;
+}
+
+
+/* מודעת שדרוג */
+.modal {
+  max-width: 600px;
+  padding: 40px;
+  text-align: center;
+  background-color: #f1f1f1;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  z-index: 10001;
+}
+
+.modal h2 {
+  font-size: 24px;
+  color: #362266;
+  margin-bottom: 20px;
+}
+
+.modal p {
+  font-size: 16px;
+  color: #666;
+  line-height: 1.6;
+  margin-bottom: 30px;
+}
+
+.modal a {
+  display: inline-block;
+  margin-top: 20px;
+  padding: 10px 20px;
+  background-color: #5D3AB0;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 4px;
+  transition: background-color 0.3s ease;
+}
+
+.modal a:hover {
+  background-color: #362266;
+}
+
+
+
 
 
 @media screen and (max-width: 900px) {
