עיצוב הוראות שימוש

--- a/site/personal.css
+++ b/site/personal.css
@@ -201,15 +201,6 @@ h3.current {
 }
 
 
-#instructions {
-  text-align: center;
-  max-width: 400px;
-  align-items: center;
-  justify-content: center;
-  margin: auto auto;
-}
-
-
   #resultsTable table {
     table-layout: fixed;
     width: 100%;
@@ -252,6 +243,44 @@ p {
 }
 
 
+/* עיצוב הוראות שימוש */
+.instructions-container {
+  max-width: 400px;
+  text-align: center;
+  margin: auto;
+  padding: 0;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border: 2px solid #ddd;
+}
+
+.instructions-container h3 {
+  margin-top: 10px;
+  margin-bottom: 20px;
+  font-size: 24px;
+  color: #362266;
+  padding: 10px;
+  border-bottom: 1px solid #ddd;
+}
+
+.instructions-container p {
+  margin-bottom: 15px;
+  font-size: 16px;
+  padding: 0 20px;
+}
+
+.instructions-container .disclaimer {
+  color: #6B6B6B;
+  font-size: 14px;
+  padding: 0 20px 20px;
+}
+
+
+
+
+
+
+/* מודעת שדרוג */
 .overlay {
   position: fixed;
   top: 0;
@@ -266,7 +295,8 @@ p {
 }
 
 
-/* מודעת שדרוג */
+
+
 .modal {
   max-width: 600px;
   padding: 40px;
