--- a/site/personal.css
+++ b/site/personal.css
@@ -276,6 +276,23 @@ p {
 }
 
 
+.loading-container {
+  display: flex;
+  padding-top: 20px;
+  align-items: baseline;
+  justify-content: center;
+}
+
+.loading-image {
+  width: 20px;
+  padding-left: 10px;
+}
+
+.loading-text {
+  font-size: 20px;
+  color: #362266;
+  font-weight: 600;
+}
 
 
 
@@ -293,9 +310,6 @@ p {
   align-items: center;
   z-index: 10000;
 }
-
-
-
 
 .modal {
   max-width: 600px;
