שינוי שיטת העתקה + עיצוב

--- a/site/personal.css
+++ b/site/personal.css
@@ -569,3 +569,15 @@ a {
 .modal-content .share-link:hover {
   background-color: #362266;
 }
+
+
+.copied-message {
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  background-color: #5D3AB0;
+  color: #fff;
+  padding: 5px 10px;
+  border-radius: 5px;
+  z-index: 9999;
+}
