הוספת כפתור בחירת סינגלים בלבד

--- a/site/personal.css
+++ b/site/personal.css
@@ -611,3 +611,30 @@ a {
   border-radius: 5px;
   z-index: 9999;
 }
+
+
+/* עיצוב כפתור "הצג סינגלים בלבד" */
+.filter-container {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.filter-button-light {
+  font-family: Tahoma;
+  font-size: 14px;
+  background-color: #F3F3F3; /* Light gray color */
+  color: #4D3091; /* Purple color */
+  border: none;
+  border-radius: 20px;
+  padding: 6px 16px;
+  cursor: pointer;
+  transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  border: 1px solid #DADADA;
+}
+
+.filter-button-light:hover {
+  background-color: #EDEDED; /* Lighter gray color on hover */
+  color: #362266; /* Darker purple color on hover */
+}
+
