--- a/site/personal.css
+++ b/site/personal.css
@@ -556,10 +556,10 @@ a {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-  display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 10000;
+  z-index: 10000;  
+  display: none;
 }
 
 .modal-content {
@@ -657,14 +657,30 @@ a {
   align-items: center;
 }
 
-
 .loading-message img {
   width: 20px;
   vertical-align: middle;
   margin-left: 7px;
 }
 
-
 .loading-message.show {
   display: flex;
+}
+
+
+/* Styles for the "OK" button */
+#modalOkButton {
+  display: inline-block;
+  margin-top: 	10px;
+  padding: 5px 10px;
+  background-color: #5D3AB0;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 4px;
+  cursor: pointer; 
+  transition: background-color 0.3s ease;
+}
+
+#modalOkButton:hover {
+  background-color: #362266;
 }
