--- a/site/personal.css
+++ b/site/personal.css
@@ -1,3 +1,45 @@
+.text-bubble {
+  display: none;
+  background-color: #F0F2F5;
+  color: #362266;
+  padding: 15px;
+  border-radius: 14px;
+  font-size: 16px;
+  text-align: center;
+  position: absolute;
+  z-index: 9999;
+  top: 150%; /* Position the bubble below the input */
+  left: 50%;
+  transform: translateX(-50%);
+  transform: translateX(-50%);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  width: 250px;
+}  
+
+.text-bubble.active {
+  display: block;
+  opacity: 1;
+  transform: translateY(-20px) translateX(-50%);
+}
+
+.text-bubble:before {
+  content: "";
+  position: absolute;
+  top: -14px; /* Adjust to position above the bubble */
+  left: 50%;
+  transform: translateX(-50%);
+  border-style: solid;
+  border-width: 0 10px 15px;
+  border-color: transparent transparent #F0F2F5 transparent; /* Adjust the color to match the bubble */
+  z-index: -1;
+}
+
+.input-container {
+  position: relative;
+  display: inline-block;
+}
+
+
 form {
   margin-bottom: 20px;
   text-align: center;
