--- a/site/personal.css
+++ b/site/personal.css
@@ -342,9 +342,8 @@ p {
 }
 
 .instructions-container .disclaimer {
-  color: #6B6B6B;
-  font-size: 14px;
-  padding: 0 20px 20px;
+  color: #474747;
+  padding: 0 20px 0px;
 }
 
 
@@ -399,7 +398,7 @@ p {
 
 .modal p {
   font-size: 16px;
-  color: #666;
+  color: #3B3B3B;
   line-height: 1.6;
   margin-bottom: 5px;
 }
@@ -724,5 +723,104 @@ a {
 }
 
 #modalOkButton:hover {
+  background-color: #362266;
+}
+
+
+/* עיצוב הודעת עזרה */
+
+.help-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 10000;
+  display: none;
+}
+
+.prev-step,
+.next-step {
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	font-size: 18px;
+	color: #5D3AB0;
+	cursor: pointer;
+}
+
+.prev-step {
+	left: 10px;
+}
+
+.next-step {
+	right: 10px;
+}
+
+/* Close button */
+.close-button {
+	position: absolute;
+	top: 10px;
+	right: 10px;
+	font-size: 24px;
+	cursor: pointer;
+	color: #666;
+}
+
+.help-modal {
+	padding: 40px;
+	text-align: center;
+}
+
+.help-modal img {
+	max-width: 100%;
+	height: auto;
+	border-radius: 8px; /* Add rounded edges */
+	margin-top: 10px; /* Adjust spacing between text and image */
+}
+
+.help-modal h2 {
+  font-size: 24px;
+  color: #362266;
+  margin-bottom: 20px;
+}
+
+.help-modal p {
+  font-size: 16px;
+  color: #3B3B3B;
+  line-height: 1.6;
+  margin-bottom: 5px;
+}
+
+.help-modal-container {
+	width: 500px;
+	height: 400px; /* Set your desired height here */
+	background-color: #f1f1f1;
+	border-radius: 8px;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+	z-index: 10001;
+	position: relative;
+	overflow-y: none;
+}
+
+.helpButton {
+  font-family: Tahoma;
+  display: inline-block;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  padding: 10px 20px;
+  background-color: #5D3AB0;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 4px;
+  
+  transition: background-color 0.3s ease;
+}
+
+.helpButton:hover {
   background-color: #362266;
 }
