עיצוב כפתור עזרה

--- a/site/personal.css
+++ b/site/personal.css
@@ -809,18 +809,20 @@ a {
 
 .helpButton {
   font-family: Tahoma;
+  font-weight: bold;
   display: inline-block;
   margin-top: 10px;
   margin-bottom: 20px;
   padding: 10px 20px;
-  background-color: #5D3AB0;
-  color: #fff;
-  text-decoration: none;
+  background-color: #FFFFF;
+  color: #5D3AB0;
   border-radius: 4px;
-  
+  border-style: solid;
+  border-color: #666699;  
   transition: background-color 0.3s ease;
 }
 
 .helpButton:hover {
+  color: white;
   background-color: #362266;
 }
