עיצוב מצביע כפתור עזרה

--- a/site/personal.css
+++ b/site/personal.css
@@ -819,6 +819,7 @@ a {
   border-radius: 4px;
   border-style: solid;
   border-color: #666699;  
+  cursor: pointer;
   transition: background-color 0.3s ease;
 }
 
