--- a/site/personal.css
+++ b/site/personal.css
@@ -112,15 +112,17 @@ border: none;
 }
 
 .search-select {
-  font-size: 18px;
+  font-size: 16px;
   border-radius: 5px 10px 10px 5px;
-  width: 150px;
+  height: 60px;
+  width: 120px;
 }
 
 .search-input {
   caret-color: #2d4373;
   font-size: 20px;
-  width: 230px;
+  height: 58.4px;
+  width: 220px;
   border-radius: 5px;
 }
 
