--- a/site/personal.css
+++ b/site/personal.css
@@ -851,3 +851,29 @@ a {
   background: linear-gradient(to right, #3498db, #4D3091); /* Gradient fill */
   transition: width 0.3s ease-in-out;
 }
+
+
+/* Style for the "Load more" button */
+#loadMoreButton {
+  background-color: #362266; /* Background color */
+  color: #fff; /* Text color */
+  font-size: 16px; /* Font size */
+  border: none; /* Remove borders */
+  border-radius: 5px; /* Rounded corners */
+  padding: 10px 20px; /* Padding */
+  cursor: pointer; /* Change cursor to pointer on hover */
+  transition: background-color 0.3s ease; /* Smooth background color transition */
+  margin: 20px auto; /* Center the button horizontally */
+  display: block; /* Make it a block element for centering */
+}
+
+/* Hover effect for the button */
+#loadMoreButton:hover {
+  background-color: #5D3AB0; /* Change background color on hover */
+}
+
+/* Center the button horizontally */
+#loadMoreButton {
+  display: block;
+  margin: 20px auto;
+}
