--- a/site/personal.css
+++ b/site/personal.css
@@ -89,13 +89,13 @@ border: none;
   bottom: 0;
   width: 100%;
   background-color: #FFF5A6;
-  padding-top: 20px;
+  padding-top: 15px;
   text-align: center;
   z-index: 9999;
 }
 
 .fixed-bottom p {
-  margin-bottom: 20px;
+  margin-bottom: 15px;
   font-size: 14px;
 }
 
@@ -560,9 +560,9 @@ a {
 
 .fixed-bottom {
   position: fixed;
-  padding-top: 15px;
+  padding-top: 5px;
   text-align: center;
-  height: 30px;
+  height: 35px;
   z-index: 9999;
 }
 
@@ -864,16 +864,10 @@ a {
   cursor: pointer; /* Change cursor to pointer on hover */
   transition: background-color 0.3s ease; /* Smooth background color transition */
   margin: 20px auto; /* Center the button horizontally */
-  display: block; /* Make it a block element for centering */
+  display: none; /* Make it a block element for centering */
 }
 
 /* Hover effect for the button */
 #loadMoreButton:hover {
   background-color: #5D3AB0; /* Change background color on hover */
-}
-
-/* Center the button horizontally */
-#loadMoreButton {
-  display: block;
-  margin: 20px auto;
 }
