חיפוש אלבום וזמר בלחיצה

--- a/site/personal.css
+++ b/site/personal.css
@@ -871,3 +871,28 @@ a {
 #loadMoreButton:hover {
   background-color: #5D3AB0; /* Change background color on hover */
 }
+
+
+/* Style for album and singer buttons */
+.album-button,
+.singer-button {
+  background: none;
+  border: none;
+  padding: 0;
+  font-size: inherit;
+  font-family: inherit;
+  color: inherit;
+  cursor: pointer;
+  Padding: 5px;
+  transition: color 0.1s; /* Smooth color transition on hover */
+}
+
+/* Change text color on hover */
+.album-button:hover,
+.singer-button:hover {
+  color: #362266; /* Change to your desired hover color */
+  font-weight : 500;
+  Background: white;
+  Padding: 5px;
+  border-radius: 5px;
+}
