--- a/site/personal.css
+++ b/site/personal.css
@@ -562,12 +562,17 @@ a {
   position: fixed;
   padding-top: 5px;
   text-align: center;
-  height: 35px;
+  height: 50px;
   z-index: 9999;
 }
 
 .fixed-bottom p {
   font-size: 12px;
+}
+
+#music-in-drive {
+  margin-top: 5px;
+  padding: 4px;
 }
 
 }
