--- a/site/personal.css
+++ b/site/personal.css
@@ -905,7 +905,7 @@ a {
 
 
 
-/* Add the ripple effect using ::before pseudo-element */
+/* אפקט אדווה לסרגל הכותרת */
 .ripple-header::before {
     content: "";
     display: block;
@@ -925,7 +925,6 @@ header.clicked::after {
   animation: ripple 2s linear;
 }
 
-/* Define the ripple animation */
 @keyframes ripple {
   0% {
     width: 0;
