חלוקת אפקטים רגילים ומיוחדים

--- a/site/personal.css
+++ b/site/personal.css
@@ -393,8 +393,6 @@ p {
     z-index: 10001;
 }
 
-
-
 .modal h2 {
   font-size: 24px;
   color: #362266;
@@ -408,7 +406,24 @@ p {
   margin-bottom: 5px;
 }
 
+
 .modal a {
+  display: inline-block;
+  margin-top: 20px;
+  padding: 10px 20px;
+  background-color: #5D3AB0;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 4px;
+  transition: background-color 0.3s ease;
+}
+
+.modal a:hover {
+  background-color: #362266;
+}
+
+
+.efectButton {
   display: inline-block;
   margin-top: 20px;
   padding: 10px 20px;
@@ -421,7 +436,7 @@ p {
   transition: background-position 0.5s ease;
 }
 
-.modal a:hover {
+.efectButton:hover {
   background: linear-gradient(90deg, #362266 25%, #5D3AB0 50%, #362266 75%);
 
 }
