התאמת מודעות כותרת תחתונה

--- a/site/personal.css
+++ b/site/personal.css
@@ -99,6 +99,11 @@ border: none;
   font-size: 14px;
 }
 
+/* קישורים לפרסומות */
+.fixed-bottom a {
+  padding: 5px 10px;
+  Font-weight: bold;
+}
 
 .search-input,
 .search-select {
