יישור טופס חיפוש

--- a/site/personal.css
+++ b/site/personal.css
@@ -200,6 +200,8 @@ border: none;
 
 .search-form {
   position: absolute;
+  left: 0px;
+  right: 0px;
   padding-top: 40px;
   width: 100%;
   z-index: 9999;
