--- a/site/personal.css
+++ b/site/personal.css
@@ -828,10 +828,10 @@ a {
   display: inline-block;
   margin-top: 10px;
   margin-bottom: 20px;
-  padding: 10px 20px;
+  padding: 8px 20px;
   background-color: #FFFFF;
   color: #5D3AB0;
-  border-radius: 4px;
+  border-radius:24px;
   border-style: solid;
   border-color: #666699;  
   cursor: pointer;
@@ -848,40 +848,42 @@ a {
 .loading-message {
   display: none;
   position: fixed;
-  top: 50%;
+  bottom: 60px;
   left: 50%;
-  transform: translate(-50%, -50%);
-  padding: 12px 20px;
-  border-radius: 5px;
+  transform: translateX(-50%);
+  padding: 10px 15px;
+  border-radius: 8px;
   font-weight: bold;
   color: #362266;
   background-color: #F3F3F3;
-  font-size: 18px;
+  font-size: 16px;
   box-shadow: 2px 5px 15px rgba(45, 67, 115, 0.4);
   z-index: 9999;
   align-items: center;
 }
 
 .loading-message img {
-  width: 18px;
+  width: 16px;
   vertical-align: middle;
-  margin-left: 7px;
+  margin-left: 6px;
 }
 
 .loading-message.show {
   display: flex;
 }
 
-
 .progress-bar-container {
   text-align: center;
+  display: flex; /* Add this line */
+  align-items: center; /* Add this line */
 }
 
 .progress-bar {
-  width: 100%;
+  width: 100px;
   background-color: #ccc;
-  height: 9px;
-  margin-top: 10px;
+  height: 10px;
+  margin-top: 4px;
+  margin-right: 12px;
   border-radius: 5px;
 }
 
@@ -892,6 +894,8 @@ a {
   background: linear-gradient(to right, #3498db, #4D3091); /* Gradient fill */
   transition: width 0.3s ease-in-out;
 }
+
+
 
 
 /* Style for the "Load more" button */
