--- a/site/personal.css
+++ b/site/personal.css
@@ -716,7 +716,7 @@ a {
   cursor: pointer;
   transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  border: 1px solid #DADADA;
+  border: 1px solid #9370DB;
 }
 
 
