עיצוב מיקום חיצים

--- a/site/personal.css
+++ b/site/personal.css
@@ -1020,11 +1020,11 @@ header.clicked::after {
 }
 
 #prevSection {
-    right: 10px;
+    right: 3%;
 }
 
 #nextSection {
-    left: 10px;
+    left: 3%;
 }
 
 #prevSection:hover,
