--- a/site/personal.css
+++ b/site/personal.css
@@ -1089,3 +1089,11 @@ header.clicked::after {
 .custom-table tbody td, .custom-table tbody th {
   padding: 10px; /* Adjust the padding as needed */
 }
+
+
+
+@keyframes colorTransition {
+  0% { color: #960B0D; }
+  50% { color: #58135E; }
+  100% { color: #FFFD55; }
+}
