--- a/site/personal.css
+++ b/site/personal.css
@@ -335,44 +335,34 @@ p {
 
 /* עיצוב הוראות שימוש */
 .instructions-container {
-  max-width: 1200px; /* Adjust the max-width to your preference */
+  max-width: 400px;
   text-align: center;
   margin: auto;
-  padding: 10px; /* Add some padding to the container */
+  padding: 0;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   border: 2px solid #ddd;
-  display: flex; /* Use flexbox to arrange ads in a row */
-  flex-wrap: wrap; /* Allow ads to wrap to the next line */
-  justify-content: space-between; /* Distribute ads evenly */
-}
-
-.instructions-container .ad-container {
-  width: calc(30% - 20px); /* Set the width of each ad container with some spacing */
-  box-sizing: border-box; /* Include padding and border in the width */
-  margin-bottom: 20px; /* Add bottom margin for spacing between rows */
-  padding: 10px;
 }
 
 .instructions-container h3 {
   margin-top: 10px;
   margin-bottom: 10px;
-  font-size: 18px; /* Adjust the font size */
+  font-size: 24px;
   color: #362266;
+  padding: 8px;
   border-bottom: 1px solid #ddd;
 }
 
 .instructions-container p {
-  margin-bottom: 10px; /* Adjust the margin */
-  font-size: 14px; /* Adjust the font size */
+  margin-bottom: 15px;
+  font-size: 16px;
+  padding: 0 20px;
 }
 
 .instructions-container .disclaimer {
   color: #474747;
-  margin-top: 10px; /* Add margin to the disclaimer */
+  padding: 0 20px 0px;
 }
-
-
 
 
 .loading-container {
