--- a/artists/artist-style.css
+++ b/artists/artist-style.css
@@ -1,37 +1,36 @@
 .instructions-container {
-  max-width: 1200px; /* Adjust the max-width to your preference */
+  max-width: 1200px;
   text-align: center;
   margin: auto;
-  padding: 10px; /* Add some padding to the container */
+  padding: 10px;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   border: 2px solid #ddd;
-  display: flex; /* Use flexbox to arrange ads in a row */
-  flex-wrap: wrap; /* Allow ads to wrap to the next line */
-  justify-content: space-between; /* Distribute ads evenly */
 }
 
 .instructions-container .ad-container {
-  width: calc(30% - 20px); /* Set the width of each ad container with some spacing */
-  box-sizing: border-box; /* Include padding and border in the width */
-  margin-bottom: 20px; /* Add bottom margin for spacing between rows */
+  width: 32%;
+  box-sizing: border-box;
+  margin: 0 auto 10px; /* Add bottom margin for spacing between ads */
   padding: 10px;
+  display: inline-block; /* Display ads inline to allow height variation */
+  vertical-align: top; /* Align ads to the top */
 }
 
 .instructions-container h3 {
   margin-top: 10px;
   margin-bottom: 10px;
-  font-size: 18px; /* Adjust the font size */
+  font-size: 18px;
   color: #362266;
   border-bottom: 1px solid #ddd;
 }
 
 .instructions-container p {
-  margin-bottom: 10px; /* Adjust the margin */
-  font-size: 14px; /* Adjust the font size */
+  margin-bottom: 10px;
+  font-size: 14px;
 }
 
 .instructions-container .disclaimer {
   color: #474747;
-  margin-top: 10px; /* Add margin to the disclaimer */
+  margin-top: 10px;
 }
